--- a/api.csproj
+++ b/api.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="assets\images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assets\images\" />
+  </ItemGroup>
 </Project>
